examples/test/testpolicy6078.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy6078
  namespace: namespace300
spec:
  podSelector:
    matchLabels:
      key0: value38
      key9: value8
      key32: value2
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key26: value35
          key29: value15
          key46: value10
      podSelector:
        matchLabels:
          key15: value44
          key7: value26
